--- a/src/components/Defi/FAQ.module.css
+++ b/src/components/Defi/FAQ.module.css
@@ -48,3 +48,27 @@ border-radius: 0px;
         margin-top: 50px;
         }
 }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+
+    .section1{
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    top: 6150px;
+    background: #D6DCE0;
+    border-radius: 0px;
+    }
+    
+    .section1 img{
+        margin-left: -800px;
+        margin-top: 100px;
+    }
+    .questions{
+        margin-top: -50%;
+        line-height: 25px;
+        width: 57%;
+        margin-left: 500px;
+        color: black;
+    }
+}
