--- a/src/components/Blockchain/blockchain.module.css
+++ b/src/components/Blockchain/blockchain.module.css
@@ -86,4 +86,9 @@
   
 
   }
+  @media only screen and (min-width: 834px) and (max-width: 1400px) {
+    .section1 h1 {
+      margin-top: -30%;
+    }
+  }
  
