--- a/src/components/Blockchain/Contact.module.css
+++ b/src/components/Blockchain/Contact.module.css
@@ -96,3 +96,8 @@ display: none;
       line-height: 30px;
     }
 }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+    .section1{
+    top: 1980px;
+    }
+  }
