--- a/src/components/Blockchain/Services.module.css
+++ b/src/components/Blockchain/Services.module.css
@@ -55,3 +55,8 @@ border-radius: 0px;
     }
     
 }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+    .section1{
+    top: 2700px;
+    }
+  }
