--- a/src/components/Blockchain/Contact.module.css
+++ b/src/components/Blockchain/Contact.module.css
@@ -98,6 +98,19 @@ display: none;
 }
 @media only screen and (min-width: 834px) and (max-width: 1400px) {
     .section1{
-    top: 1980px;
+        top: 3900px;
+    }
+    .section1 h1{
+        margin-top: -500px;
+        font-size: 37px;
+    }
+    
+    .table{
+        margin-top: 100px;
+        width: 550px;
+       
+    }
+    .section1 h6{
+    margin-top: -2%;
     }
   }
