--- a/src/components/Wallet/Expertise.module.css
+++ b/src/components/Wallet/Expertise.module.css
@@ -45,4 +45,11 @@
     }
   }
   
-
+  @media only screen and (min-width: 834px) and (max-width: 1400px) {
+    .section1 {
+        margin-top: 70px;
+      }
+      .section1 h2 {
+    text-align: center;  
+    }
+  }
