--- a/src/components/Blockchain/Contract.module.css
+++ b/src/components/Blockchain/Contract.module.css
@@ -91,3 +91,21 @@ line-height: 30px;
         
 
 }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+    .section1{
+        top: 3900px;
+    }
+    .section1 h1{
+        margin-top: -500px;
+        font-size: 37px;
+    }
+    
+    .table{
+        margin-top: 100px;
+        width: 550px;
+       
+    }
+    .section1 h6{
+    margin-top: -2%;
+    }
+  }
