--- a/src/components/Blockchain/Contact.module.css
+++ b/src/components/Blockchain/Contact.module.css
@@ -61,7 +61,6 @@ border-radius: 0px;
 display: none;
     }
 }
-
 @media only screen and (min-width: 834px) and (max-width: 1300px) {
 
     .section1{
@@ -98,11 +97,22 @@ display: none;
 }
 @media only screen and (min-width: 834px) and (max-width: 1400px) {
     .section1{
-        top: 3900px;
+        display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    
+    position: absolute;
+    height: fit-content;
+    width: 100%;
+    top: 3900px;
+    color: aliceblue;
+    background: #343434;
+    border-radius: 0px;
     }
     .section1 h1{
-        margin-top: -500px;
-        font-size: 37px;
+        margin-top: -400px;
     }
     
     .table{
@@ -111,6 +121,12 @@ display: none;
        
     }
     .section1 h6{
-    margin-top: -2%;
+        width: 50%;
+      margin-left: -44%;
+      padding-right: 90px;
+      text-align: center;
+      line-height: 30px;
     }
-  }
+    
+
+}
