--- a/src/components/Coin/coin.module.css
+++ b/src/components/Coin/coin.module.css
@@ -170,3 +170,43 @@ border-radius: 0px;
     
 
 }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+
+    .section1 img{
+        margin-left: 55%;
+        height: 400px;
+     margin-top: -10%;
+    }
+  
+    .section1 h1{
+        margin-top: -27%;
+    }
+    
+    .section2{
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 40px;
+    position: absolute;
+    height: 800px;
+    width: 100%;
+    top: 610px;
+    
+    background: #D6DCE0;
+    border-radius: 0px;
+    }
+    .section2 img{
+        margin-left: -48%;
+        height: 400px;
+    }
+    .section2 h5{
+        width: 47%;
+        margin-left: 47%;
+    }
+    .section2 h1{
+        margin-top:-39% ;
+        margin-left: 46%;
+    }
+    
+}
