--- a/src/components/Coin/FAQ.module.css
+++ b/src/components/Coin/FAQ.module.css
@@ -78,3 +78,32 @@ border-radius: 0px;
         color: black;
     }
 }
+
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+
+    .section1{
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    gap: 20px;
+    top: 3680px ;
+    position: absolute;
+    height: fit-content;
+    width: 100%;
+    background: #F1F1F1;
+    
+    border-radius: 0px;
+    }
+    .section1 img{
+        margin-left: -800px;
+        margin-top: 100px;
+    }
+    .questions{
+        margin-top: -50%;
+        line-height: 25px;
+        width: 57%;
+        margin-left: 500px;
+        color: black;
+    }
+}
