--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,8 @@
   -ms-transform: scale(1.2); /* IE 9 */
   -webkit-transform: scale(1.2); /* Safari 3-8 */
   transform: scale(1.2);
-  color: blue;
+  color: rgb(0, 0, 1);
+  font-weight: 600;
   transition: all .6s;
 }
 /* Clients.js css section */
@@ -112,6 +113,14 @@ border-radius: 0px;
         
               padding-right: 80px;
             }    
+                .nav-link:hover{
+              -ms-transform: scale(0); /* IE 9 */
+              -webkit-transform: scale(0); /* Safari 3-8 */
+              transform: scale(1);
+              color: rgb(0, 0, 1);
+              font-weight: 600;
+              transition: all .6s;
+            }
      
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
