--- a/src/components/Web3.0/Contact.module.css
+++ b/src/components/Web3.0/Contact.module.css
@@ -39,3 +39,8 @@ border-radius: 0px;
         margin-left: 0px ;
     }
 }
+@media only screen and (min-width: 1100px) and (max-width: 1400px) {
+    .section1{
+    top: 7990px;
+    }
+}
