--- a/src/components/Exchange/Admin.module.css
+++ b/src/components/Exchange/Admin.module.css
@@ -57,3 +57,10 @@ border-radius: 0px;
         margin-top: -35%;
     }
 }
+
+@media only screen and (min-width: 1100px) and (max-width: 1400px) {
+
+    .questions{
+        margin-top: -35%;
+    }
+}
