--- a/src/components/Exchange/Order.module.css
+++ b/src/components/Exchange/Order.module.css
@@ -66,3 +66,17 @@ border-radius: 0px;
     }
     
 }
+@media only screen and (min-width: 1100px) and (max-width: 1400px) {
+    .section1 img{
+        margin-top: -10%;
+        margin-left: -42%;
+    }
+    .questions{
+        margin-left: 50%;
+        margin-top: -35%;
+    }
+    .section1{
+    height: 650px;
+ 
+    }
+}
