--- a/src/components/Exchange/Benefits.module.css
+++ b/src/components/Exchange/Benefits.module.css
@@ -73,6 +73,9 @@ border-radius: 0px;
     height: 752px;
       top: 7800px;
     }
+    .section1 h1{
+        margin-top: -15%;
+    }
     .questions{
         margin-left: 50%;
         margin-top: -35%;
