--- a/src/components/Exchange/Services.module.css
+++ b/src/components/Exchange/Services.module.css
@@ -51,3 +51,11 @@ border-radius: 0px;
     border-radius: 0px;
     }
 }
+@media only screen and (min-width: 1100px) and (max-width: 1400px) {
+    .section1{
+    height: 1902px;
+    top: 8570px;
+    padding: 0px 20px 90px;
+    gap: 40px;
+    }
+}
