--- a/src/components/Defi/defi.module.css
+++ b/src/components/Defi/defi.module.css
@@ -74,5 +74,9 @@ border-radius: 0px;
      top: 1450px;
 
     }
-  
+ }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+    .section3{
+    top: 1120px;
+    }
 }
