--- a/src/components/Defi/Company.module.css
+++ b/src/components/Defi/Company.module.css
@@ -32,3 +32,13 @@ border-radius: 0px;
     }
   
 }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+    .section1{
+    width: 100%;
+    top: 1570px;
+    height: 640px;
+    }
+    .section1 h1{
+        margin-top: -16%;
+    }
+}
