--- a/src/components/Blockchain/Contact.module.css
+++ b/src/components/Blockchain/Contact.module.css
@@ -113,7 +113,9 @@ display: none;
     }
     .section1 h1{
         margin-top: -400px;
+        font-size: 32px;
     }
+    
     
     .table{
         margin-top: 100px;
